--- a/frontend/src/Admin/assets/css/admin-style.css
+++ b/frontend/src/Admin/assets/css/admin-style.css
@@ -18134,9 +18134,9 @@ input[type=password]::-ms-clear {
   cursor: pointer;
 }
 
-.progress-wrap {
+/* .progress-wrap {
   min-width: 147px;
-}
+} */
 
 .uploaded-img {
   position: relative;
