--- a/frontend/src/Admin/assets/logo.css
+++ b/frontend/src/Admin/assets/logo.css
@@ -1,11 +1,12 @@
-
-    
-
-
 body {
-    font-family: "Fira Sans", sans-serif !important;
-    font-size: 16px;
-    color: #676767;
-    background: #FCFBFB;
-    overflow-x: hidden;
+  font-family: "Fira Sans", sans-serif !important;
+  font-size: 16px;
+  color: #676767;
+  background: #fcfbfb;
+  overflow-x: hidden;
+}
+
+.custamize-nav {
+  display: inline-flex;
+  width: 75%;
 }
