--- a/frontend/src/assets/css/user-style.css
+++ b/frontend/src/assets/css/user-style.css
@@ -12251,53 +12251,53 @@ Version      : 1.0
 }
 
 .progress-wrap.active-progress {
-  opacity: 1;
-  visibility: visible;
-  transform: translateY(0);
+  opacity: 1 !important;
+  visibility: visible !important;
+  transform: translateY(0) !important;
 }
 
 .progress-wrap {
-  position: fixed;
-  right: 12px;
-  bottom: 25px;
-  height: 35px;
-  width: 35px;
-  cursor: pointer;
-  display: block;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  box-shadow: inset 0 0 0 2px rgba(75, 64, 237, 0.2);
-  z-index: 99;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-  transform: translateY(15px);
-  -webkit-transform: translateY(15px);
-  -moz-transform: translateY(15px);
-  -ms-transform: translateY(15px);
-  -o-transform: translateY(15px);
+  position: fixed !important;
+  right: 12px !important;
+  bottom: 25px !important;
+  height: 35px !important;
+  width: 35px !important;
+  cursor: pointer !important;
+  display: block !important;
+  border-radius: 50% !important;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  -ms-border-radius: 50% !important;
+  -o-border-radius: 50% !important;
+  box-shadow: inset 0 0 0 2px rgba(75, 64, 237, 0.2) !important;
+  z-index: 99!important;
+  opacity: 0 !important;
+  visibility: hidden !important;
+  -webkit-transition: all 200ms linear !important;
+  transition: all 200ms linear !important;
+  transform: translateY(15px )!important;
+  -webkit-transform: translateY(15px)!important;
+  -moz-transform: translateY(15px)!important;
+  -ms-transform: translateY(15px)!important;
+  -o-transform: translateY(15px)!important;
 }
 .progress-wrap::after {
-  position: absolute;
-  content: "\f062";
-  font-family: "FontAwesome";
-  text-align: center;
-  line-height: 35px;
-  font-size: 17px;
-  color: #ffffff;
-  left: 0;
-  top: 0;
-  height: 35px;
-  width: 35px;
-  cursor: pointer;
-  display: block;
-  z-index: 1;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
+  position: absolute !important;
+  content: "\f062" !important ;
+  font-family: "FontAwesome" !important;
+  text-align: center !important;
+  line-height: 35px !important;
+  font-size: 17px !important;
+  color: #ffffff !important;
+  left: 0 !important;
+  top: 0 !important;
+  height: 35px !important;
+  width: 35px !important;
+  cursor: pointer !important;
+  display: block !important;
+  z-index: 1 !important;
+  -webkit-transition: all 200ms linear !important;
+  transition: all 200ms linear !important;
 }
 
 .pagination .pagination {
@@ -12520,63 +12520,63 @@ Version      : 1.0
 }
 
 .progress-wrap.active-progress {
-  opacity: 1;
-  visibility: visible;
-  transform: translateY(0);
+  opacity: 1 !important;
+  visibility: visible !important;
+  transform: translateY(0) !important;
 }
 
 .progress-wrap {
-  position: fixed;
-  right: 12px;
-  bottom: 25px;
-  height: 35px;
-  width: 35px;
-  cursor: pointer;
-  display: block;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  box-shadow: inset 0 0 0 2px rgba(75, 64, 237, 0.2);
-  z-index: 99;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-  transform: translateY(15px);
-  -webkit-transform: translateY(15px);
-  -moz-transform: translateY(15px);
-  -ms-transform: translateY(15px);
-  -o-transform: translateY(15px);
+  position: fixed !important;
+  right: 12px !important;
+  bottom: 25px !important;
+  height: 35px !important;
+  width: 35px !important;
+  cursor: pointer !important;
+  display: block !important;
+  border-radius: 50%!important;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  -ms-border-radius: 50% !important;
+  -o-border-radius: 50% !important;
+  box-shadow: inset 0 0 0 2px rgba(75, 64, 237, 0.2) !important;
+  z-index: 99 !important;
+  opacity: 0 !important;
+  visibility: hidden !important;
+  -webkit-transition: all 200ms linear !important;
+  transition: all 200ms linear !important;
+  transform: translateY(15px) !important;
+  -webkit-transform: translateY(15px) !important;
+  -moz-transform: translateY(15px) !important;
+  -ms-transform: translateY(15px) !important;
+  -o-transform: translateY(15px) !important;
 }
 .progress-wrap svg.progress-circle path {
-  stroke: #FFA633;
-  stroke-width: 4;
-  box-sizing: border-box;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
+  stroke: #FFA633 !important;
+  stroke-width: 4  !important;
+  box-sizing: border-box  !important;
+  -webkit-transition: all 200ms linear  !important;
+  transition: all 200ms linear  !important;
 }
 .progress-wrap svg path {
-  fill: none;
+  fill: none !important;
 }
 .progress-wrap::after {
-  position: absolute;
-  content: "\f062";
-  font-family: "FontAwesome";
-  text-align: center;
-  line-height: 35px;
-  font-size: 17px;
-  color: #FFA633;
-  left: 0;
-  top: 0;
-  height: 35px;
-  width: 35px;
-  cursor: pointer;
-  display: block;
-  z-index: 1;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
+  position: absolute !important;
+  content: "\f062" !important;
+  font-family: "FontAwesome" !important;
+  text-align: center !important;
+  line-height: 35px !important;
+  font-size: 17px !important;
+  color: #FFA633 !important;
+  left: 0 !important;
+  top: 0 !important;
+  height: 35px !important;
+  width: 35px !important;
+  cursor: pointer !important;
+  display: block !important;
+  z-index: 1 !important;
+  -webkit-transition: all 200ms linear !important;
+  transition: all 200ms linear !important;
 }
 
 iframe {
