--- a/frontend/src/Admin/assets/logo.css
+++ b/frontend/src/Admin/assets/logo.css
@@ -11,10 +11,12 @@ body {
   width: 78%;
 }
 
-
-
- .navbar-1{
+.navbar-1 {
+  position: fixed;
+  top: 0;
+  width: 100%;
   z-index: 999;
-  background-color: white;
- }
-
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
