--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -311,7 +311,7 @@ iframe[id^=":"] {
 
 @media (min-width: 991px) {
   .blogbanner {
-    background-size: cover !important;
+    background-size: contain !important;
     background-position: center !important;
     min-height: 450px !important;
   }
