--- a/frontend/src/assets/banner.css
+++ b/frontend/src/assets/banner.css
@@ -26,3 +26,8 @@
   background-color: #222; /* dropdown bg */
   color: #fff; /* dropdown text */
 }
+.demoFunction {
+  font-family: "Fira Sans", sans-serif;
+  color: #676767; /* Change this */
+  font-weight: 900!important;
+}
