--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
 @font-face {
   font-family: "Poppins";
   src: url("/frontend/public/fonts/Poppins-Light.woff2") format("woff2"),
@@ -10,6 +12,28 @@
   font-weight: 300;
   font-style: normal;
   font-display: swap;
+}
+
+:root {
+  --font-primary: "poppins", sans-serif;
+}
+
+*,
+html,
+body {
+  font-family: var(--font-primary) !important;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+.fa, .fas, .far, .fal, .fab {
+  font-family: "Font Awesome 5 Free" !important;
+}
+
+.fab {
+  font-family: "Font Awesome 5 Brands" !important;
 }
 
 .btn-outline-light {
@@ -344,8 +368,6 @@ iframe[id^=":"] {
   border: none !important;
   box-shadow: none !important;
 }
-
-
 
 .footer a {
   color: #ccc !important;
