--- a/frontend/src/assets/css/user-style.css
+++ b/frontend/src/assets/css/user-style.css
@@ -10472,7 +10472,7 @@ Version      : 1.0
 
 .section-heading.heading-four h2 {
   position: relative;
-  padding: 0 33px;
+  /* padding: 0 33px; */
   margin-bottom: 4px;
   display: inline-block;
 }
